--- a/ColorPicker/ColorPickerView.xib
+++ b/ColorPicker/ColorPickerView.xib
@@ -15,7 +15,9 @@
 			<string>NSCustomView</string>
 			<string>NSTextField</string>
 			<string>NSTextFieldCell</string>
+			<string>NSButtonCell</string>
 			<string>NSCustomObject</string>
+			<string>NSButton</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -41,7 +43,59 @@
 				<int key="NSvFlags">268</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="NSTextField" id="1028265651">
+					<object class="NSButton" id="852589051">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{269, 4}, {113, 32}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="84200669"/>
+						<string key="NSReuseIdentifierKey">_NS:161</string>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="696108684">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">134217728</int>
+							<string key="NSContents">Preferences</string>
+							<object class="NSFont" key="NSSupport" id="317214015">
+								<string key="NSName">LucidaGrande</string>
+								<double key="NSSize">13</double>
+								<int key="NSfFlags">1044</int>
+							</object>
+							<string key="NSCellIdentifier">_NS:161</string>
+							<reference key="NSControlView" ref="852589051"/>
+							<int key="NSButtonFlags">-2038284033</int>
+							<int key="NSButtonFlags2">129</int>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+					</object>
+					<object class="NSButton" id="84200669">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{391, 4}, {69, 32}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:161</string>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="165729893">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">134217728</int>
+							<string key="NSContents">Hide</string>
+							<reference key="NSSupport" ref="317214015"/>
+							<string key="NSCellIdentifier">_NS:161</string>
+							<reference key="NSControlView" ref="84200669"/>
+							<int key="NSButtonFlags">-2038284033</int>
+							<int key="NSButtonFlags2">129</int>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+					</object>
+					<object class="NSTextField" id="560236450">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 110}, {144, 17}}</string>
@@ -50,17 +104,13 @@
 						<reference key="NSNextKeyView" ref="56116522"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="393302154">
+						<object class="NSTextFieldCell" key="NSCell" id="417131052">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">{}</string>
-							<object class="NSFont" key="NSSupport" id="317214015">
-								<string key="NSName">LucidaGrande</string>
-								<double key="NSSize">13</double>
-								<int key="NSfFlags">1044</int>
-							</object>
+							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
-							<reference key="NSControlView" ref="1028265651"/>
+							<reference key="NSControlView" ref="560236450"/>
 							<object class="NSColor" key="NSBackgroundColor" id="835640398">
 								<int key="NSColorSpace">6</int>
 								<string key="NSCatalogName">System</string>
@@ -81,62 +131,62 @@
 							</object>
 						</object>
 					</object>
-					<object class="NSTextField" id="913636807">
+					<object class="NSTextField" id="18176214">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{297, 110}, {15, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1028265651"/>
+						<reference key="NSNextKeyView" ref="560236450"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="202511200">
+						<object class="NSTextFieldCell" key="NSCell" id="786509560">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">y:</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
-							<reference key="NSControlView" ref="913636807"/>
+							<reference key="NSControlView" ref="18176214"/>
 							<reference key="NSBackgroundColor" ref="835640398"/>
 							<reference key="NSTextColor" ref="995519273"/>
 						</object>
 					</object>
-					<object class="NSTextField" id="416140843">
+					<object class="NSTextField" id="961850033">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 128}, {144, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="913636807"/>
+						<reference key="NSNextKeyView" ref="18176214"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="78594218">
+						<object class="NSTextFieldCell" key="NSCell" id="80349534">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">{}</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
-							<reference key="NSControlView" ref="416140843"/>
+							<reference key="NSControlView" ref="961850033"/>
 							<reference key="NSBackgroundColor" ref="835640398"/>
 							<reference key="NSTextColor" ref="995519273"/>
 						</object>
 					</object>
-					<object class="NSTextField" id="149473082">
+					<object class="NSTextField" id="880623890">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{294, 128}, {17, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="416140843"/>
+						<reference key="NSNextKeyView" ref="961850033"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="30435942">
+						<object class="NSTextFieldCell" key="NSCell" id="733687583">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
 							<string key="NSContents">x:</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
-							<reference key="NSControlView" ref="149473082"/>
+							<reference key="NSControlView" ref="880623890"/>
 							<reference key="NSBackgroundColor" ref="835640398"/>
 							<reference key="NSTextColor" ref="995519273"/>
 						</object>
@@ -147,7 +197,7 @@
 						<string key="NSFrame">{{390, 52}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="852589051"/>
 						<string key="NSReuseIdentifierKey">_NS:498</string>
 						<string key="NSClassName">ColorHistoryView</string>
 					</object>
@@ -207,7 +257,7 @@
 						<string key="NSFrame">{{294, 157}, {169, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="149473082"/>
+						<reference key="NSNextKeyView" ref="880623890"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="626810620">
@@ -328,7 +378,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">x</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="416140843"/>
+						<reference key="destination" ref="961850033"/>
 					</object>
 					<int key="connectionID">32</int>
 				</object>
@@ -336,9 +386,25 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">y</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="1028265651"/>
+						<reference key="destination" ref="560236450"/>
 					</object>
 					<int key="connectionID">33</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">hide</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="84200669"/>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">hide:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="84200669"/>
+					</object>
+					<int key="connectionID">39</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -383,10 +449,12 @@
 							<reference ref="662508556"/>
 							<reference ref="871739318"/>
 							<reference ref="914187163"/>
-							<reference ref="149473082"/>
-							<reference ref="416140843"/>
-							<reference ref="913636807"/>
-							<reference ref="1028265651"/>
+							<reference ref="880623890"/>
+							<reference ref="961850033"/>
+							<reference ref="18176214"/>
+							<reference ref="560236450"/>
+							<reference ref="84200669"/>
+							<reference ref="852589051"/>
 						</object>
 						<reference key="parent" ref="1002"/>
 					</object>
@@ -450,59 +518,87 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="149473082"/>
+						<reference key="object" ref="880623890"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="30435942"/>
+							<reference ref="733687583"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">25</int>
-						<reference key="object" ref="30435942"/>
-						<reference key="parent" ref="149473082"/>
+						<reference key="object" ref="733687583"/>
+						<reference key="parent" ref="880623890"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">26</int>
-						<reference key="object" ref="416140843"/>
+						<reference key="object" ref="961850033"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="78594218"/>
+							<reference ref="80349534"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
-						<reference key="object" ref="78594218"/>
-						<reference key="parent" ref="416140843"/>
+						<reference key="object" ref="80349534"/>
+						<reference key="parent" ref="961850033"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">28</int>
-						<reference key="object" ref="913636807"/>
+						<reference key="object" ref="18176214"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="202511200"/>
+							<reference ref="786509560"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">29</int>
-						<reference key="object" ref="1028265651"/>
+						<reference key="object" ref="560236450"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="393302154"/>
+							<reference ref="417131052"/>
 						</object>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">30</int>
-						<reference key="object" ref="393302154"/>
-						<reference key="parent" ref="1028265651"/>
+						<reference key="object" ref="417131052"/>
+						<reference key="parent" ref="560236450"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
-						<reference key="object" ref="202511200"/>
-						<reference key="parent" ref="913636807"/>
+						<reference key="object" ref="786509560"/>
+						<reference key="parent" ref="18176214"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">34</int>
+						<reference key="object" ref="84200669"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="165729893"/>
+						</object>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">35</int>
+						<reference key="object" ref="165729893"/>
+						<reference key="parent" ref="84200669"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="852589051"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="696108684"/>
+						</object>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="696108684"/>
+						<reference key="parent" ref="852589051"/>
 					</object>
 				</object>
 			</object>
@@ -530,11 +626,19 @@
 					<string>3.IBPluginDependency</string>
 					<string>30.IBPluginDependency</string>
 					<string>31.IBPluginDependency</string>
+					<string>34.IBPluginDependency</string>
+					<string>35.IBPluginDependency</string>
+					<string>36.IBPluginDependency</string>
+					<string>37.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -571,7 +675,7 @@
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">33</int>
+			<int key="maxID">39</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -595,6 +699,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ColorPickerViewController</string>
 					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">hide:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">hide:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">hide:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
