--- a/ColorPicker/ColorPickerView.xib
+++ b/ColorPicker/ColorPickerView.xib
@@ -46,7 +46,7 @@
 					<object class="NSTextField" id="603478626">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{245, 100}, {16, 17}}</string>
+						<string key="NSFrame">{{225, 108}, {16, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="261914724"/>
@@ -86,7 +86,7 @@
 					<object class="NSTextField" id="970020311">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{244, 123}, {16, 17}}</string>
+						<string key="NSFrame">{{224, 130}, {16, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="577123685"/>
@@ -106,7 +106,7 @@
 					<object class="NSTextField" id="732523666">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{244, 148}, {18, 17}}</string>
+						<string key="NSFrame">{{224, 151}, {18, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1874621"/>
@@ -126,7 +126,7 @@
 					<object class="NSTextField" id="743952033">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{264, 80}, {122, 17}}</string>
+						<string key="NSFrame">{{224, 77}, {202, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="56116522"/>
@@ -135,7 +135,7 @@
 						<object class="NSTextFieldCell" key="NSCell" id="918774296">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
-							<string key="NSContents">Click color to copy</string>
+							<string key="NSContents">Click color to copy to clipboard</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
 							<reference key="NSControlView" ref="743952033"/>
@@ -146,7 +146,7 @@
 					<object class="NSButton" id="852589051">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{269, 4}, {113, 32}}</string>
+						<string key="NSFrame">{{360, 16}, {22, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="84200669"/>
@@ -155,12 +155,16 @@
 						<object class="NSButtonCell" key="NSCell" id="696108684">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">134217728</int>
-							<string key="NSContents">Preferences</string>
+							<string key="NSContents"/>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:161</string>
 							<reference key="NSControlView" ref="852589051"/>
-							<int key="NSButtonFlags">-2038284033</int>
-							<int key="NSButtonFlags2">129</int>
+							<int key="NSButtonFlags">-2041822977</int>
+							<int key="NSButtonFlags2">130</int>
+							<object class="NSCustomResource" key="NSNormalImage">
+								<string key="NSClassName">NSImage</string>
+								<string key="NSResourceName">preferences</string>
+							</object>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
 							<int key="NSPeriodicDelay">200</int>
@@ -170,7 +174,7 @@
 					<object class="NSButton" id="84200669">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{391, 4}, {69, 32}}</string>
+						<string key="NSFrame">{{391, 10}, {69, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -194,10 +198,10 @@
 					<object class="NSTextField" id="560236450">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{378, 225}, {144, 17}}</string>
+						<string key="NSFrame">{{143, 20}, {144, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="644966"/>
+						<reference key="NSNextKeyView" ref="852589051"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="417131052">
@@ -214,7 +218,7 @@
 					<object class="NSTextField" id="18176214">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{356, 225}, {15, 17}}</string>
+						<string key="NSFrame">{{124, 20}, {15, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="560236450"/>
@@ -234,7 +238,7 @@
 					<object class="NSTextField" id="961850033">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{378, 243}, {144, 17}}</string>
+						<string key="NSFrame">{{42, 20}, {144, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="18176214"/>
@@ -254,7 +258,7 @@
 					<object class="NSTextField" id="880623890">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{353, 243}, {17, 17}}</string>
+						<string key="NSFrame">{{17, 20}, {17, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="961850033"/>
@@ -274,17 +278,17 @@
 					<object class="NSCustomView" id="914187163">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{390, 52}, {20, 20}}</string>
+						<string key="NSFrame">{{370, 49}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="852589051"/>
+						<reference key="NSNextKeyView" ref="880623890"/>
 						<string key="NSReuseIdentifierKey">_NS:498</string>
 						<string key="NSClassName">ColorHistoryView</string>
 					</object>
 					<object class="NSCustomView" id="871739318">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{356, 52}, {20, 20}}</string>
+						<string key="NSFrame">{{336, 49}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="914187163"/>
@@ -294,7 +298,7 @@
 					<object class="NSCustomView" id="662508556">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{322, 52}, {20, 20}}</string>
+						<string key="NSFrame">{{302, 49}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="871739318"/>
@@ -304,7 +308,7 @@
 					<object class="NSCustomView" id="99802762">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{289, 52}, {20, 20}}</string>
+						<string key="NSFrame">{{264, 49}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="662508556"/>
@@ -314,17 +318,17 @@
 					<object class="NSCustomView" id="336200556">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{315, 232}, {20, 20}}</string>
+						<string key="NSFrame">{{227, 182}, {57, 48}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="880623890"/>
+						<reference key="NSNextKeyView" ref="25355851"/>
 						<string key="NSReuseIdentifierKey">_NS:498</string>
 						<string key="NSClassName">ColorHistoryView</string>
 					</object>
 					<object class="NSCustomView" id="56116522">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{253, 52}, {20, 20}}</string>
+						<string key="NSFrame">{{227, 49}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="99802762"/>
@@ -334,7 +338,7 @@
 					<object class="NSCustomView" id="182226330">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{20, 52}, {200, 200}}</string>
+						<string key="NSFrame">{{20, 49}, {181, 181}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="336200556"/>
@@ -344,7 +348,7 @@
 					<object class="NSTextField" id="261914724">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{294, 100}, {169, 17}}</string>
+						<string key="NSFrame">{{274, 108}, {94, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="743952033"/>
@@ -364,7 +368,7 @@
 					<object class="NSTextField" id="577123685">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{294, 123}, {169, 17}}</string>
+						<string key="NSFrame">{{274, 130}, {88, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="603478626"/>
@@ -384,7 +388,7 @@
 					<object class="NSTextField" id="1874621">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{294, 148}, {169, 17}}</string>
+						<string key="NSFrame">{{274, 151}, {94, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="970020311"/>
@@ -404,16 +408,16 @@
 					<object class="NSTextField" id="25355851">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{294, 169}, {169, 17}}</string>
+						<string key="NSFrame">{{299, 213}, {144, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="732523666"/>
+						<reference key="NSNextKeyView" ref="644966"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="626810620">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
-							<string key="NSContents">Label</string>
+							<string key="NSContents">hex</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
 							<reference key="NSControlView" ref="25355851"/>
@@ -424,16 +428,16 @@
 					<object class="NSTextField" id="644966">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{294, 194}, {169, 17}}</string>
+						<string key="NSFrame">{{299, 185}, {144, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="25355851"/>
+						<reference key="NSNextKeyView" ref="732523666"/>
 						<string key="NSReuseIdentifierKey">_NS:3935</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="903783891">
 							<int key="NSCellFlags">68288064</int>
 							<int key="NSCellFlags2">272630784</int>
-							<string key="NSContents">Label</string>
+							<string key="NSContents">rgb</string>
 							<reference key="NSSupport" ref="317214015"/>
 							<string key="NSCellIdentifier">_NS:3935</string>
 							<reference key="NSControlView" ref="644966"/>
@@ -442,7 +446,7 @@
 						</object>
 					</object>
 				</object>
-				<string key="NSFrameSize">{480, 272}</string>
+				<string key="NSFrameSize">{474, 250}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="182226330"/>
@@ -639,28 +643,28 @@
 						<reference key="object" ref="1005"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="644966"/>
-							<reference ref="25355851"/>
 							<reference ref="182226330"/>
-							<reference ref="56116522"/>
-							<reference ref="99802762"/>
 							<reference ref="662508556"/>
 							<reference ref="871739318"/>
 							<reference ref="914187163"/>
 							<reference ref="84200669"/>
-							<reference ref="852589051"/>
 							<reference ref="336200556"/>
-							<reference ref="743952033"/>
-							<reference ref="1874621"/>
 							<reference ref="880623890"/>
 							<reference ref="961850033"/>
 							<reference ref="18176214"/>
-							<reference ref="560236450"/>
-							<reference ref="261914724"/>
+							<reference ref="25355851"/>
+							<reference ref="644966"/>
+							<reference ref="1874621"/>
 							<reference ref="577123685"/>
+							<reference ref="261914724"/>
 							<reference ref="732523666"/>
 							<reference ref="970020311"/>
 							<reference ref="603478626"/>
+							<reference ref="743952033"/>
+							<reference ref="56116522"/>
+							<reference ref="99802762"/>
+							<reference ref="560236450"/>
+							<reference ref="852589051"/>
 						</object>
 						<reference key="parent" ref="1002"/>
 					</object>
@@ -1184,5 +1188,9 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">preferences</string>
+			<string key="NS.object.0">{102.45795576271276, 102.45795576271276}</string>
+		</object>
 	</data>
 </archive>
